--- a/E-Comm/Views/Shared/_Layout.cshtml
+++ b/E-Comm/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/E_Comm.styles.css" asp-append-version="true"/>
 </head>
@@ -21,8 +22,7 @@
         <div class="container">
             <!-- Brand -->
             <a class="navbar-brand d-flex align-items-center" asp-area="" asp-controller="Home" asp-action="Index">
-                <i class="fas fa-crown text-primary me-2"></i>
-                <strong>3B1G</strong>
+                <strong class="brand-font">3B1G</strong>
             </a>
             
             <!-- Mobile Toggle -->
@@ -151,7 +151,7 @@
         <div class="row">
             <div class="col-lg-4 mb-4">
                 <h5 class="mb-3">
-                    <i class="fas fa-crown me-2"></i>3B1G
+                    <span class="brand-font">3B1G</span>
                 </h5>
                 <p class="mb-3 opacity-75">Your gateway to books, movies, and games. Discover amazing entertainment content from around the world.</p>
                 <div class="d-flex gap-3">
@@ -225,7 +225,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <p class="mb-0 opacity-75 small">
-                    &copy; 2025 3B1G. All rights reserved.
+                    &copy; 2025 <span class="brand-font">3B1G</span>. All rights reserved.
                 </p>
             </div>
             <div class="col-md-6 text-md-end">
