--- a/E-Comm/Views/Home/About.cshtml
+++ b/E-Comm/Views/Home/About.cshtml
@@ -7,7 +7,7 @@
     <!-- YouTube Video Background -->
     <div class="position-absolute top-0 start-0 w-100 h-100">
         <iframe 
-            src="https://www.youtube.com/embed/D_-sYUHyhAw?autoplay=1&mute=1&controls=0&showinfo=0&rel=0&loop=1&playlist=D_-sYUHyhAw&start=43&end=93"
+            src="https://www.youtube.com/embed/bILn9v5MlkY?autoplay=1&mute=1&controls=0&showinfo=0&rel=0&loop=1&playlist=bILn9v5MlkY"
             frameborder="0" 
             allow="autoplay; encrypted-media" 
             allowfullscreen
