Added Signup.cshtml and updated _Layout.cshtml, Auth, Login.cshtml and Index.cshtml.

--- a/E-Comm/Views/Auth/Login.cshtml
+++ b/E-Comm/Views/Auth/Login.cshtml
@@ -57,8 +57,9 @@
                     </form>
 
                     <div class="text-center">
-                        <p class="text-muted">Don't have an account? 
-                            <a asp-controller="Customer" asp-action="CreateAccount" class="text-decoration-none fw-semibold">
+                        <p class="text-muted">
+                            Don't have an account?
+                            <a asp-controller="Auth" asp-action="Signup" class="text-primary text-decoration-none fw-semibold">
                                 Create one here
                             </a>
                         </p>
