--- a/E-Comm/Views/Shared/_Layout.cshtml
+++ b/E-Comm/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary btn-sm" asp-controller="Customer" asp-action="CreateAccount">
+                            <a class="btn btn-primary btn-sm" asp-controller="Auth" asp-action="Signup">
                                 <i class="fas fa-user-plus me-1"></i>Sign Up
                             </a>
                         </li>
